--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,23 +1,23 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("https://fonts.googleapis.com/css2?family=Syne:wght@400..800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #272727;
+  --foreground: #ededed;
+  --primary: #0d9488;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Syne", Arial, Helvetica, sans-serif;
+}
+
+.text-stroke {
+  -webkit-text-stroke: 0.5px var(--foreground);
+  -webkit-text-fill-color: transparent;
 }
 
 @layer utilities {
